maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: '(' expected but identifier found.
    Nord()
    ^Escaper:5: error: illegal start of simple expression
  }
  ^Escaper:26: error: expected class or object definition
def Nord(){
^Escaper:46: error: Unmatched closing brace '}' ignored here
}
^